--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -5,6 +5,17 @@
   year={2003}
 }
 
+@inproceedings{bernstein:2005,
+  author       = {Yaniv Bernstein and Justin Zobel},
+  editor       = {Otthein Herzog and Hans{-}J{\"{o}}rg Schek and Norbert Fuhr and Abdur Chowdhury and Wilfried Teiken},
+  title        = {Redundant documents and search effectiveness},
+  booktitle    = {Proceedings of the 2005 {ACM} {CIKM} International Conference on Information and Knowledge Management, Bremen, Germany, October 31 - November 5, 2005},
+  pages        = {736--743},
+  publisher    = {{ACM}},
+  year         = {2005},
+  url          = {https://doi.org/10.1145/1099554.1099733}
+}
+
 @book{chuklin:2015,
   author       = {Aleksandr Chuklin and Ilya Markov and Maarten de Rijke},
   title        = {Click Models for Web Search},
@@ -92,6 +103,16 @@
   year={2004}
 }
 
+@inproceedings{khattab:2020,
+  author       = {Omar Khattab and Matei Zaharia},
+  editor       = {Jimmy X. Huang and Yi Chang and Xueqi Cheng and Jaap Kamps and Vanessa Murdock and Ji{-}Rong Wen and Yiqun Liu},
+  title        = {ColBERT: Efficient and Effective Passage Search via Contextualized Late Interaction over {BERT}},
+  booktitle    = {Proceedings of the 43rd International {ACM} {SIGIR} conference on research and development in Information Retrieval, {SIGIR} 2020, Virtual Event, China, July 25-30, 2020},
+  pages        = {39--48},
+  publisher    = {{ACM}},
+  year         = {2020},
+  doi          = {10.1145/3397271.3401075}
+}
 
 @InProceedings{keller:2024,
   author       = {J{\"{u}}ri Keller and Timo Breuer and Philipp Schaer},
@@ -135,6 +156,19 @@
   year         = {2021},
   doi          = {10.2200/S01123ED1V01Y202108HLT053},
   isbn         = {978-3-031-01053-8}
+}
+
+@inproceedings{nogueira:2020,
+  author       = {Rodrigo Frassetto Nogueira and Zhiying Jiang and Ronak Pradeep and Jimmy Lin},
+  editor       = {Trevor Cohn and Yulan He and Yang Liu},
+  title        = {Document Ranking with a Pretrained Sequence-to-Sequence Model},
+  booktitle    = {Findings of the Association for Computational Linguistics: {EMNLP} 2020, Online Event, 16-20 November 2020},
+  series       = {Findings of {ACL}},
+  volume       = {{EMNLP} 2020},
+  pages        = {708--718},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2020},
+  doi          = {10.18653/V1/2020.FINDINGS-EMNLP.63}
 }
 
 @inproceedings{alkhalifa:2024,
@@ -181,6 +215,15 @@
   author = {Robertson, Stephen and Walker, Steve and Jones, Susan and {Hancock-Beaulieu}, Micheline and Gatford, Mike},
   year = {1994},
   month = jan
+}
+
+@article{tamber:2023,
+  author       = {Manveer Singh Tamber and Ronak Pradeep and Jimmy Lin},
+  title        = {Scaling Down, LiTting Up: Efficient Zero-Shot Listwise Reranking with Seq2seq Encoder-Decoder Models},
+  journal      = {CoRR},
+  volume       = {abs/2312.16098},
+  year         = {2023},
+  doi          = {10.48550/ARXIV.2312.16098}
 }
 
 @inproceedings{chapelle:2009,
