--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -171,6 +171,17 @@
   doi          = {10.18653/V1/2020.FINDINGS-EMNLP.63}
 }
 
+@inproceedings{sakai:2007,
+  author       = {Tetsuya Sakai},
+  editor       = {Wessel Kraaij and Arjen P. de Vries and Charles L. A. Clarke and Norbert Fuhr and Noriko Kando},
+  title        = {Alternatives to Bpref},
+  booktitle    = {{SIGIR} 2007: Proceedings of the 30th Annual International {ACM} {SIGIR} Conference on Research and Development in Information Retrieval, Amsterdam, The Netherlands, July 23-27, 2007},
+  pages        = {71--78},
+  publisher    = {{ACM}},
+  year         = {2007},
+  doi          = {10.1145/1277741.1277756}
+}
+
 @inproceedings{alkhalifa:2024,
   author       = {Rabab Alkhalifa and Hsuvas Borkakoty and Romain Deveaud and Alaa El{-}Ebshihy and Luis Espinosa Anke and Tobias Fink and Petra Galusc{\'{a}}kov{\'{a}} and Gabriela Gonz{\'{a}}lez S{\'{a}}ez and Lorraine Goeuriot and David Iommi and Maria Liakata and Harish Tayyar Madabushi and Pablo Medina{-}Alias and Philippe Mulhem and Florina Piroi and Martin Popel and Arkaitz Zubiaga},
   editor       = {Guglielmo Faggioli and Nicola Ferro and Petra Galusc{\'{a}}kov{\'{a}} and Alba Garc{\'{\i}}a Seco de Herrera},
