--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -16,7 +16,7 @@ In our retrieval experiments, we contrast five baselines with our three approach
     \begin{minipage}{.49\textwidth}
         \includegraphics[width=\textwidth]{query-overlap}
         \vspace{-4ex}
-        \caption{Frequency of queries and points in time.}
+        \caption{Frequency of queries over time.}
         \label{fig:query-overlap}
     \end{minipage}
     \hfill    
