--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -38,10 +38,8 @@ After we fixed the queries to those that overlap among the different timestamps,
 
 \input{table-results}
 
-We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. However, as the LongEval corpus was derived from click logs derived from unknown rankings, unjudged documents have a high impact on the evaluation. In this scenario, it is recommendet to remove unjudged documents to mitigate their impact~\cite{sakai:2007} which we additionally report as nDCG@10$^{'}$.
-
-
-\subsection{Temporal Per Topic Cross Validation}
-To emphasize the actual effect of the approaches and how well they generalize to new documents, we evaluated them in a cross-validation setting. For each topic at each point in time, the relevant documents are split into $k$ folds. For each fold, only the test documents are indexed and retrieved. The different approaches can then use the documents in the train split if they were already present at the previous points in time. Since some documents can be relevant for multiple topics, the train test splits must be updated after creation to avoid duplicates. This makes the splits less random and differently large but should be neglectable for this initial evaluation.
+We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. However, as the LongEval corpus was derived from click logs derived from unknown rankings, unjudged documents have a high impact on the evaluation. In this scenario, it is recommendet to remove unjudged documents to mitigate their impact~\cite{sakai:2007} which we additionally report as nDCG@10$^{'}$. Table~\ref{table-results} shows the results. ColBERT, List-in-T5, and monoT5 outperform the BM25 baseline in most cases, whreas BM25 with RM3 expansion does not substantially differ from BM25. All our three approaches substantially outperform the five baselines (nDCG$^{'}$ is higher than all five baselines in accross all timestamps). After removing the undesired impact of unjudged documents, both BM25$_{RF}$ and BM25$_{keyquery}$ outperform boosting, indicating that they also generalize to new, deleted, and modified documents. Keyqueries are the most effective approach in all cases, outperforming the best transformer by a large margin.
 
 \input{table-results-fold}
+
+To verify if the improvements of BM25$_{RF}$ and BM25$_{keyquery}$ come, as expected, from a generalization beyound previously known relevant documents, we conduct an ablation study where we remove xy.
