--- a/notebooks/evaluate-with-ir-datasets-without-overlap.ipynb
+++ b/notebooks/evaluate-with-ir-datasets-without-overlap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "docs_to_skip = {i: set() for i in ['t0', 't1', 't2', 't3', 't4', 't5']}\n",
     "\n",
-    "for _, i in pd.read_csv('../data/document-groups-relevant.csv.gz').iterrows():\n",
+    "for _, i in pd.read_csv('../data/document-groups-judged-extended.csv.gz').iterrows():\n",
     "    previously_labeled = False\n",
     "    for k in ['t0', 't1', 't2', 't3', 't4', 't5']:\n",
     "        if not str(i[k]).startswith('doc'):\n",
@@ -56,9 +56,7 @@
     "    elif 'castorini' in system or 'MonoT5' in system or 'ColBERT' in system:\n",
     "        run_name = f'../data/results_baseline/{system}-{timestamp}-split-{split}.run.gz'\n",
     "    else:\n",
-    "        run_name = glob(f'../data/results/{system}_{timestamp}_F{split}*')\n",
-    "        if split == 'no-split':\n",
-    "            run_name = glob(f'../data/results/{system}_{timestamp}_F0*')[:1]\n",
+    "        run_name = glob(f'../data/results_full/{system}_{timestamp}_F*')\n",
     "        assert len(run_name) == 1\n",
     "        run_name = run_name[0]\n",
     "    ret = TrecRun(run_name)\n",
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -88,72 +86,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timestamp t1 skipped: 9087 remaining: 3130\n",
-      "Timestamp t2 skipped: 9311 remaining: 4156\n",
-      "Timestamp t3 skipped: 7218 remaining: 2567\n",
-      "Timestamp t4 skipped: 86204 remaining: 2097\n",
-      "Timestamp t5 skipped: 150931 remaining: 5239\n"
+      "Timestamp t1 skipped: 11843 remaining: 374\n",
+      "Timestamp t2 skipped: 12702 remaining: 765\n",
+      "Timestamp t3 skipped: 8186 remaining: 1599\n",
+      "Timestamp t4 skipped: 87067 remaining: 1234\n",
+      "Timestamp t5 skipped: 154142 remaining: 2028\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 1/4 [00:10<00:32, 10.79s/it]"
+      " 25%|██▌       | 1/4 [00:12<00:38, 12.72s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timestamp t1 skipped: 9087 remaining: 3130\n",
-      "Timestamp t2 skipped: 9311 remaining: 4156\n",
-      "Timestamp t3 skipped: 7218 remaining: 2567\n",
-      "Timestamp t4 skipped: 86204 remaining: 2097\n",
-      "Timestamp t5 skipped: 150931 remaining: 5239\n"
+      "Timestamp t1 skipped: 11843 remaining: 374\n",
+      "Timestamp t2 skipped: 12702 remaining: 765\n",
+      "Timestamp t3 skipped: 8186 remaining: 1599\n",
+      "Timestamp t4 skipped: 87067 remaining: 1234\n",
+      "Timestamp t5 skipped: 154142 remaining: 2028\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 2/4 [00:23<00:24, 12.12s/it]"
+      " 50%|█████     | 2/4 [00:25<00:25, 12.92s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timestamp t1 skipped: 9087 remaining: 3130\n",
-      "Timestamp t2 skipped: 9311 remaining: 4156\n",
-      "Timestamp t3 skipped: 7218 remaining: 2567\n",
-      "Timestamp t4 skipped: 86204 remaining: 2097\n",
-      "Timestamp t5 skipped: 150931 remaining: 5239\n"
+      "Timestamp t1 skipped: 11843 remaining: 374\n",
+      "Timestamp t2 skipped: 12702 remaining: 765\n",
+      "Timestamp t3 skipped: 8186 remaining: 1599\n",
+      "Timestamp t4 skipped: 87067 remaining: 1234\n",
+      "Timestamp t5 skipped: 154142 remaining: 2028\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 3/4 [00:36<00:12, 12.48s/it]"
+      " 75%|███████▌  | 3/4 [00:38<00:12, 12.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timestamp t1 skipped: 9087 remaining: 3130\n",
-      "Timestamp t2 skipped: 9311 remaining: 4156\n",
-      "Timestamp t3 skipped: 7218 remaining: 2567\n",
-      "Timestamp t4 skipped: 86204 remaining: 2097\n",
-      "Timestamp t5 skipped: 150931 remaining: 5239\n"
+      "Timestamp t1 skipped: 11843 remaining: 374\n",
+      "Timestamp t2 skipped: 12702 remaining: 765\n",
+      "Timestamp t3 skipped: 8186 remaining: 1599\n",
+      "Timestamp t4 skipped: 87067 remaining: 1234\n",
+      "Timestamp t5 skipped: 154142 remaining: 2028\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:45<00:00, 11.29s/it]\n"
+      "100%|██████████| 4/4 [00:45<00:00, 11.25s/it]\n"
      ]
     }
    ],
@@ -175,23 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 128.15it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 145.09it/s]\n"
      ]
     },
     {
@@ -267,81 +256,81 @@
        "      <th>5</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t1</td>\n",
-       "      <td>0.014845</td>\n",
-       "      <td>0.202843</td>\n",
-       "      <td>2.906463e-01</td>\n",
+       "      <td>-0.006553</td>\n",
+       "      <td>0.314084</td>\n",
+       "      <td>0.875125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t2</td>\n",
-       "      <td>0.021519</td>\n",
-       "      <td>0.160624</td>\n",
-       "      <td>2.151672e-02</td>\n",
+       "      <td>0.043478</td>\n",
+       "      <td>0.311687</td>\n",
+       "      <td>0.118663</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t3</td>\n",
-       "      <td>0.033982</td>\n",
-       "      <td>0.138292</td>\n",
-       "      <td>7.322105e-04</td>\n",
+       "      <td>0.041661</td>\n",
+       "      <td>0.216074</td>\n",
+       "      <td>0.013202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t4</td>\n",
-       "      <td>0.013051</td>\n",
-       "      <td>0.091711</td>\n",
-       "      <td>4.591926e-02</td>\n",
+       "      <td>0.013609</td>\n",
+       "      <td>0.083940</td>\n",
+       "      <td>0.027224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>BM25+RF</td>\n",
        "      <td>t5</td>\n",
-       "      <td>-0.002193</td>\n",
-       "      <td>0.092733</td>\n",
-       "      <td>6.082765e-01</td>\n",
+       "      <td>0.011714</td>\n",
+       "      <td>0.128856</td>\n",
+       "      <td>0.079944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t1</td>\n",
-       "      <td>0.152094</td>\n",
-       "      <td>0.293239</td>\n",
-       "      <td>3.938804e-13</td>\n",
+       "      <td>0.031016</td>\n",
+       "      <td>0.273354</td>\n",
+       "      <td>0.393472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t2</td>\n",
-       "      <td>0.114818</td>\n",
-       "      <td>0.276209</td>\n",
-       "      <td>2.545465e-12</td>\n",
+       "      <td>0.038418</td>\n",
+       "      <td>0.215115</td>\n",
+       "      <td>0.046074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t3</td>\n",
-       "      <td>0.112618</td>\n",
-       "      <td>0.217115</td>\n",
-       "      <td>3.496066e-12</td>\n",
+       "      <td>0.041228</td>\n",
+       "      <td>0.146711</td>\n",
+       "      <td>0.000326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t4</td>\n",
-       "      <td>0.090543</td>\n",
-       "      <td>0.166500</td>\n",
-       "      <td>1.537825e-13</td>\n",
+       "      <td>0.008711</td>\n",
+       "      <td>0.052642</td>\n",
+       "      <td>0.024215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>keyquery</td>\n",
        "      <td>t5</td>\n",
-       "      <td>0.039509</td>\n",
-       "      <td>0.169294</td>\n",
-       "      <td>5.058075e-07</td>\n",
+       "      <td>0.009106</td>\n",
+       "      <td>0.098636</td>\n",
+       "      <td>0.075389</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -354,16 +343,16 @@
        "2   BM25+qrel_boost        t3        0.000000                  0.000000   \n",
        "3   BM25+qrel_boost        t4        0.000000                  0.000000   \n",
        "4   BM25+qrel_boost        t5        0.000000                  0.000000   \n",
-       "5           BM25+RF        t1        0.014845                  0.202843   \n",
-       "6           BM25+RF        t2        0.021519                  0.160624   \n",
-       "7           BM25+RF        t3        0.033982                  0.138292   \n",
-       "8           BM25+RF        t4        0.013051                  0.091711   \n",
-       "9           BM25+RF        t5       -0.002193                  0.092733   \n",
-       "10         keyquery        t1        0.152094                  0.293239   \n",
-       "11         keyquery        t2        0.114818                  0.276209   \n",
-       "12         keyquery        t3        0.112618                  0.217115   \n",
-       "13         keyquery        t4        0.090543                  0.166500   \n",
-       "14         keyquery        t5        0.039509                  0.169294   \n",
+       "5           BM25+RF        t1       -0.006553                  0.314084   \n",
+       "6           BM25+RF        t2        0.043478                  0.311687   \n",
+       "7           BM25+RF        t3        0.041661                  0.216074   \n",
+       "8           BM25+RF        t4        0.013609                  0.083940   \n",
+       "9           BM25+RF        t5        0.011714                  0.128856   \n",
+       "10         keyquery        t1        0.031016                  0.273354   \n",
+       "11         keyquery        t2        0.038418                  0.215115   \n",
+       "12         keyquery        t3        0.041228                  0.146711   \n",
+       "13         keyquery        t4        0.008711                  0.052642   \n",
+       "14         keyquery        t5        0.009106                  0.098636   \n",
        "\n",
        "    ndcg_condensed (p-value)  \n",
        "0                        NaN  \n",
@@ -371,19 +360,19 @@
        "2                        NaN  \n",
        "3                        NaN  \n",
        "4                        NaN  \n",
-       "5               2.906463e-01  \n",
-       "6               2.151672e-02  \n",
-       "7               7.322105e-04  \n",
-       "8               4.591926e-02  \n",
-       "9               6.082765e-01  \n",
-       "10              3.938804e-13  \n",
-       "11              2.545465e-12  \n",
-       "12              3.496066e-12  \n",
-       "13              1.537825e-13  \n",
-       "14              5.058075e-07  "
+       "5                   0.875125  \n",
+       "6                   0.118663  \n",
+       "7                   0.013202  \n",
+       "8                   0.027224  \n",
+       "9                   0.079944  \n",
+       "10                  0.393472  \n",
+       "11                  0.046074  \n",
+       "12                  0.000326  \n",
+       "13                  0.024215  \n",
+       "14                  0.075389  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -438,8 +427,8 @@
       "\n",
       "    \n",
       "    BM25$_{Boost}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ & +0.000$^{\\phantom{*}}_{\\color{gray}\\pm.000}$ \\\\\n",
-      "    BM25$_{RF}$ & +0.015$^{\\phantom{*}}_{\\color{gray}\\pm.203}$ & +0.022$^{\\phantom{*}}_{\\color{gray}\\pm.161}$ & +0.034$^{*}_{\\color{gray}\\pm.138}$ & +0.013$^{\\phantom{*}}_{\\color{gray}\\pm.092}$ & -0.002$^{\\phantom{*}}_{\\color{gray}\\pm.093}$ \\\\\n",
-      "    BM25$_{keyquery}$ & +0.152$^{*}_{\\color{gray}\\pm.293}$ & +0.115$^{*}_{\\color{gray}\\pm.276}$ & +0.113$^{*}_{\\color{gray}\\pm.217}$ & +0.091$^{*}_{\\color{gray}\\pm.167}$ & +0.040$^{*}_{\\color{gray}\\pm.169}$ \\\\\n",
+      "    BM25$_{RF}$ & -0.007$^{\\phantom{*}}_{\\color{gray}\\pm.314}$ & +0.043$^{\\phantom{*}}_{\\color{gray}\\pm.312}$ & +0.042$^{*}_{\\color{gray}\\pm.216}$ & +0.014$^{\\phantom{*}}_{\\color{gray}\\pm.084}$ & +0.012$^{\\phantom{*}}_{\\color{gray}\\pm.129}$ \\\\\n",
+      "    BM25$_{keyquery}$ & +0.031$^{\\phantom{*}}_{\\color{gray}\\pm.273}$ & +0.038$^{\\phantom{*}}_{\\color{gray}\\pm.215}$ & +0.041$^{*}_{\\color{gray}\\pm.147}$ & +0.009$^{\\phantom{*}}_{\\color{gray}\\pm.053}$ & +0.009$^{\\phantom{*}}_{\\color{gray}\\pm.099}$ \\\\\n",
       "\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
