--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -13,8 +13,10 @@
 
     
     BM25$_{Boost}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ \\
-    BM25$_{RF}$ & +0.015$^{\phantom{*}}_{\color{gray}\pm.203}$ & +0.022$^{\phantom{*}}_{\color{gray}\pm.161}$ & +0.034$^{*}_{\color{gray}\pm.138}$ & +0.013$^{\phantom{*}}_{\color{gray}\pm.092}$ & -0.002$^{\phantom{*}}_{\color{gray}\pm.093}$ \\
-    BM25$_{keyquery}$ & \bfseries +0.152$^{*}_{\color{gray}\pm.293}$ & \bfseries  +0.115$^{*}_{\color{gray}\pm.276}$ & \bfseries  +0.113$^{*}_{\color{gray}\pm.217}$ & \bfseries  +0.091$^{*}_{\color{gray}\pm.167}$ & \bfseries +0.040$^{*}_{\color{gray}\pm.169}$ \\
+    BM25$_{RF}$ & -0.007$^{\phantom{*}}_{\color{gray}\pm.314}$ & +0.043$^{\phantom{*}}_{\color{gray}\pm.312}$ & +0.042$^{*}_{\color{gray}\pm.216}$ & +0.014$^{\phantom{*}}_{\color{gray}\pm.084}$ & +0.012$^{\phantom{*}}_{\color{gray}\pm.129}$ \\
+    BM25$_{keyquery}$ & +0.031$^{\phantom{*}}_{\color{gray}\pm.273}$ & +0.038$^{\phantom{*}}_{\color{gray}\pm.215}$ & +0.041$^{*}_{\color{gray}\pm.147}$ & +0.009$^{\phantom{*}}_{\color{gray}\pm.053}$ & +0.009$^{\phantom{*}}_{\color{gray}\pm.099}$ \\
+
+
 
 \bottomrule
 \end{tabular}
