--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -15,17 +15,17 @@
     
     \midrule
 
-    BM25 & .112 & .146 & .137 & .133 & .116 & .352 & .390 & .438 & .392 & .338 \\
-    BM25$_{RM3}$ & .106 & .140 & .128 & .137 & .118 & .359 & .390 & .440 & .398 & .347 \\
+    BM25 & .155 & .184 & .172 & .175 & .134 & .471 & .492 & .516 & .486 & .379 \\
+    BM25$_{RM3}$ & .147 & .181 & .163 & .174 & .134 & .478 & .490 & .524 & .492 & .388 \\
     ColBERT & .198 & .207 & .201 & .184 & .151 & .402 & .409 & .420 & .408 & .315 \\
     List-in-T5 & .203 & .204 & .202 & .198 & .161 & .401 & .413 & .425 & .413 & .317 \\
     monoT5 & .202 & .219 & .197 & .202 & .154 & .405 & .410 & .415 & .411 & .314 \\
     
     \midrule
     
-    BM25$_{Boost}$ & \bfseries .256 & .250 & \bfseries .225 & \bfseries .260 & \bfseries .177 & .412 & .439 & .472 & .438 & .357 \\
-    BM25$_{RF}$ & .223 & .226 & .200 & .222 & .147 & .441 & .466 & .494 & .450 & .362 \\
-    BM25$_{keyquery}$ & .252 & \bfseries .285 & .219 & .224 & .162 & \bfseries .533 & \bfseries .549 & \bfseries .552 & \bfseries .523 & \bfseries .406 \\
+    BM25$_{Boost}$ & .355 & .372 & .287 & .364 & .271 & .529 & .546 & .541 & .540 & .412 \\
+    BM25$_{RF}$ & .303 & .332 & .241 & .262 & .191 & .606 & .611 & .590 & .552 & .426 \\
+    BM25$_{keyquery}$ & .252 & .285 & .219 & .224 & .162 & .533 & .549 & .552 & .523 & .406 \\
 
 \bottomrule
 \end{tabular}
