--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -39,7 +39,7 @@ After we fixed the queries to those that overlap among the different timestamps,
 
 \input{table-results}
 
-We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. However, as the LongEval corpus was derived from click logs derived from unknown rankings, unjudged documents have a high impact on the evaluation. In this scenario, it is recommendet to remove unjudged documents to mitigate their impact~\cite{sakai:2007} which we additionally report as nDCG@10$^{'}$. Table~\ref{tab:table-results} shows the results. ColBERT, List-in-T5, and monoT5 outperform the BM25 baseline in most cases, whreas BM25 with RM3 expansion does not substantially differ from BM25. All our three approaches substantially outperform the five baselines (nDCG$^{'}$ is higher than all five baselines in accross all timestamps). After removing the undesired impact of unjudged documents, both BM25$_{RF}$ and BM25$_{keyquery}$ outperform boosting, indicating that they also generalize to new, deleted, and modified documents. Keyqueries are the most effective approach in all cases, outperforming the best transformer by a large margin.
+We evaluate the effectiveness of our five baselines and our three approaches using nDCG@10. However, as the LongEval corpus was derived from click logs derived from unknown rankings, unjudged documents have a high impact on the evaluation. In this scenario, it is recommendet to remove unjudged documents to mitigate their impact~\cite{sakai:2007} which we additionally report as nDCG@10$^{'}$. Table~\ref{tab:table-results} shows the results. ColBERT, List-in-T5, and monoT5 outperform the BM25 baseline in most cases, whreas BM25 with RM3 expansion does not substantially differ from BM25. All our three approaches substantially outperform the five baselines (nDCG$^{'}$ is higher than all five baselines in across all timestamps). After removing the undesired impact of unjudged documents, both BM25$_{RF}$ and BM25$_{keyquery}$ outperform boosting, indicating that they also generalize to new, deleted, and modified documents. Keyqueries are the most effective approach in all cases, outperforming the best transformer by a large margin.
 
 \input{table-results-fold}
 
