--- a/paper/ecir25-longeval-sum.tex
+++ b/paper/ecir25-longeval-sum.tex
@@ -1,6 +1,3 @@
 \section{Conclusion and Future Work}
-In this work, we explored the capabilities of query rewriting based on historical relevance signals in a dynamic setting. We presented approaches that use documents previously indicated by a click model as relevant to rewrite the query and investigate how well they generalize to the evolving search setting.The results show that XY.
 
-
-
-TBD.
+We explored the capabilities of query rewriting approaches for re-occuring queries that counterfactually assume that documents that were previously relevant are still available---even when they might have been deleted or changed---to incorporate them as explicit relevance feedback. Our approaches only need few documents as feedback and our results show that this already suffices to significantly outperform expensive transformer-based models. Interesting directions for future work would be to also handle scenarios where the intent of a query might change, or on how to re-use relevance feedback observed for similar queries that were seen before.
