--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -1,6 +1,6 @@
 \section{Evaluation}
 
-We evaluate our counterfactual query rewriting approaches in the LongEval scenario that comes with overlapping queries across 6~timestamps between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. First, we modify the LongEval datasets to focus on queries that re-occur across timestamps and subsequently study how documents evolve over time due to creations, deletions, and content updates. Finally, we evaluate the retrieval effectiveness of all approaches and use an ablation study to study if they generalize beyond previously known relevant documents.
+We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across 6~timestamps between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. First, we modify the LongEval datasets to focus on queries that re-occur across timestamps and subsequently study how documents evolve over time due to creations, deletions, and content updates. Finally, we evaluate the retrieval effectiveness of all approaches and use an ablation study to study if they generalize beyond previously known relevant documents.
 
 \subsection{Experimental Setup}
 
