--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -2,7 +2,7 @@
 \small
 \centering
 \renewcommand{\tabcolsep}{3.2pt}
-\caption{Naturally evolved corpus.}
+\caption{Retrieval effectiveness of the five baselines and our three approaches measured as nDCG@10 with and without unjudged documents (nDCG@10$^{'}$) across the five LongEval timestamps. {\color{red} $^{*}$ marks Bonferroni corrected significance for students t-test.}}
 \label{tab:table-results}
 
 \begin{tabular}{@{}l@{}cccccccccc@{}}
